# Audit_core_pipeline

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
audit_core/: registry.py  runner.py
audit_core/adapters/: fungus_sv.py
audit_core/checks/: arithmetic.py  consistency.py  definitions.py  formulas_check.py  independence.py  statistics.py
audit_core/examples/: run_demo.py  synthetic_manuscript.json
audit_core/formulas/: custom_specs.py  standard.py
audit_core/ingest/: schema.py
audit_core/report/: pdf_report.py
audit_core/tests/: conftest.py  test_adapter_fungus_sv.py  test_arithmetic.py  test_consistency.py  test_definitions.py  test_end_to_end_synthetic.py  test_formulas_check.py  test_formulas_standard.py  test_independence.py  test_statistics.py
